# stock-tracker

./: .replit  README.md  main.py  portfolio.json  portfolios.json  pyproject.toml  requirements.txt  users.json
attached_assets/: Pasted--import-useEffect-useState-from-react-import-useRouter-from-next-router-export-defau-1752595161800_1752595161800.txt  Pasted--import-useEffect-useState-from-react-import-useRouter-from-next-router-export-defau-1752601729249_1752601729249.txt  Pasted--import-useState-useEffect-from-react-import-useRouter-from-next-router-export-defau-1752609518139_1752609518139.txt  Pasted--router-get-send-summary-def-send-email-summary-db-Session-Depends-get-db-current-user-emai-1752600879043_1752600879043.txt  Pasted-INFO-172-31-128-76-56434-POST-auth-login-HTTP-1-1-500-Internal-Server-Error-ERROR-Exce-1752595808694_1752595808694.txt  Pasted-from-fastapi-import-APIRouter-Depends-HTTPException-from-dependencies-import-get-current-user-emai-1752602808425_1752602808425.txt  Pasted-from-fastapi-import-APIRouter-Depends-HTTPException-status-from-sqlalchemy-orm-import-Session-fro-1752605786893_1752605786893.txt  Pasted-import-useEffect-useState-from-react-import-useRouter-from-next-router-type-StockSum-1752277234914_1752277234914.txt  Pasted-import-useState-useEffect-from-react-import-useRouter-from-next-router-export-defaul-1752598919843_1752598919843.txt
backend/: .dockerignore  Dockerfile  config.py  database.py  dependencies.py  docker-compose.yml  import_stocks.py  listing_status.csv  main.py  models.py  scheduler.py  schemas.py  stocks.db
(+17 files in other folders)
