[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "dcbase>=1.13.5",
    "email-validator>=2.2.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.41",
]
